<resources>
    <string name="app_name">LastPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_inventory">Inventory</string>
    <string name="navigation_history">History</string>
    <string name="navigation_profile">Profile</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add product</string>
    <string name="add2">add order</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="order_id">Order ID</string>
    <string name="add_product">Add Product</string>
    <string name="active_orders">Active Orders</string>
    <string name="add_order">Add order</string>
    <string name="history">History</string>
</resources>