<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_baseline_inventory_2_24"
        android:id="@+id/navigation_inventory"
        android:title="@string/navigation_inventory" />

    <item
        android:icon="@drawable/ic_home_black_24dp"
        android:id="@+id/navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:icon="@drawable/ic_baseline_history_24"
        android:id="@+id/navigation_history"
        android:title="@string/navigation_history" />

    <item
        android:icon="@drawable/ic_baseline_person_24"
        android:id="@+id/navigation_profile"
        android:title="@string/navigation_profile" />

</menu>