<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <action
        android:id="@+id/navigate_to_add_order_fragment"
        app:destination="@id/add_order_fragment"/>
    <action
        android:id="@+id/navigate_to_add_product"
        app:destination="@id/navigation_add_product"/>

    <fragment
        android:id="@+id/navigation_inventory"
        android:label="@string/navigation_inventory"
        android:name="com.example.lastpage.ui.profile.InventoryFragment"
        tools:layout="@layout/fragment_inventory" />
    <fragment
        android:id="@+id/navigation_add_product"
        android:label="Add Product"
        android:name="com.example.lastpage.ui.inventory.AddProductFragment"
        tools:layout="@layout/fragment_add_product"/>

    <fragment
        android:id="@+id/navigation_home"
        android:label="@string/title_home"
        android:name="com.example.lastpage.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_add_order"
            app:destination="@id/add_order_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:label="@string/navigation_history"
        android:name="com.example.lastpage.ui.history.HistoryFragment"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:label="@string/navigation_profile"
        android:name="com.example.lastpage.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/add_order_fragment"
        android:label="Add Order"
        android:name="com.example.lastpage.ui.addOrder.AddOrderFragment"
        tools:layout="@layout/add_order_fragment">
        <action
            android:id="@+id/add_order_to_home"
            app:destination="@id/navigation_home"/>
    </fragment>
</navigation>